--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
         "phpseclib/bcmath_compat": "1.0.5",
-        "phpseclib/phpseclib": "^2.0"
+        "phpseclib/phpseclib": "^2.0",
+        "ext-bcmath": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
